feat:메인템플릿 구성

--- a/test001/src/main/resources/spring/globals.properties
+++ b/test001/src/main/resources/spring/globals.properties
@@ -5,8 +5,14 @@
 # DB\ud504\ub85c\ud37c\ud2f0
 Globals.DbType = mysql
 Globals.DbDriverClassName = net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#Globals.DbDriverClassName = com.mysql.cj.jdbc.Driver
 Globals.DbUrl = jdbc:log4jdbc:mysql://127.0.0.1:3306/test001
+#Globals.DbDriverClassName = com.mysql.cj.jdbc.Driver
 #Globals.DbUrl = jdbc:mysql://127.0.0.1:3306/test001
 Globals.DbUserName = user001
 Globals.DbUserPassword = user001
+
+# Github
+# id = 
+# password = 
+# repository = https://github.com/KSun-git/test001.git
+# token = 
