--- a/test001/.settings/org.eclipse.core.resources.prefs
+++ b/test001/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/WEB-INF/jsp/layouts/snbMenu.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/jsp/layouts/templates/Layout1Template.jsp=UTF-8
