--- a/test001/pom.xml
+++ b/test001/pom.xml
@@ -201,6 +201,13 @@
 		<version>3.0.7</version>
 	</dependency>
 	
+	<!-- jackson-core -->
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-core</artifactId>
+		<version>2.9.5</version>
+	</dependency>
+	
 	<!-- jackson-databind -->
 	<dependency>
 		<groupId>com.fasterxml.jackson.core</groupId>
