--- a/test001/.settings/org.eclipse.core.resources.prefs
+++ b/test001/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/WEB-INF/jsp/common/include/bootstrapSB.jspf=UTF-8
 encoding//src/main/webapp/WEB-INF/jsp/layouts/snbMenu.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/jsp/layouts/templates/Layout1Template.jsp=UTF-8
