--- a/test001/src/main/webapp/WEB-INF/web.xml
+++ b/test001/src/main/webapp/WEB-INF/web.xml
@@ -87,7 +87,31 @@
   
   <!-- error-page -->
   <error-page>
+  	<error-code>400</error-code>
+     <location>/code400.jsp</location>
+  </error-page>
+  <error-page>
+  	<error-code>401</error-code>
+     <location>/code401.jsp</location>
+  </error-page>
+  <error-page>
+  	<error-code>403</error-code>
+     <location>/code403.jsp</location>
+  </error-page>
+  <error-page>
   	<error-code>404</error-code>
      <location>/code404.jsp</location>
+  </error-page>
+  <error-page>
+  	<error-code>500</error-code>
+     <location>/code500.jsp</location>
+  </error-page>
+  <error-page>
+  	<error-code>503</error-code>
+     <location>/code503.jsp</location>
+  </error-page>
+  <error-page>
+  	<error-code>504</error-code>
+     <location>/code504.jsp</location>
   </error-page>
 </web-app>
